<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Device Settings</string>
    <string name="prox_calibration_title_head">Calibrate proximity sensor</string>
    <string name="prox_calibration_summary_head">Do not put anything near the top of the screen while running</string>
    <string name="prox_display_title_head">Display proximity sensor data</string>
    <string name="prox_display_summary_head">Show current proximity sensor calibration data</string>
    <string name="toast_error">Error:</string>
    <string name="back_button">Back</string>
    <string name="prox_restore_title_head">Restore proximity defaults</string>
    <string name="prox_restore_summary_head">Removes the calibration data (Requires reboot).</string>
    <string name="delete_success">Successfully restored default. Please reboot.</string>
    <string name="delete_error">Failed to restore defaults.</string>
    <string name="delete_no_file">Already using defaults.</string>
    <string name="usb_charging_title_head">USB Charging</string>
    <string name="button_backlight_title_head">Button backlight</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
    <string name="vibrator_reset_default">Reset to default</string>
</resources>
