<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Display proximity calibration data -->
    <PreferenceScreen android:key="prox_display"
        android:title="@string/prox_display_title_head"
        android:summary="@string/prox_display_summary_head">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="org.omnirom.device"
            android:targetClass="org.omnirom.device.ProxDisplay" />
    </PreferenceScreen>

    <!-- Proximity sensor calibration -->
    <PreferenceScreen android:key="prox_calibration"
        android:title="@string/prox_calibration_title_head"
        android:summary="@string/prox_calibration_summary_head">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="org.omnirom.device"
            android:targetClass="org.omnirom.device.ProxCalibration" />
    </PreferenceScreen>

    <!-- Proximity sensor restore defaults -->
    <PreferenceScreen android:key="prox_restore"
        android:title="@string/prox_restore_title_head"
        android:summary="@string/prox_restore_summary_head">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="org.omnirom.device"
            android:targetClass="org.omnirom.device.ProxCalRestore" />
    </PreferenceScreen>

    <!-- USB Charging -->
    <CheckBoxPreference
        android:key="usb_charging"
        android:title="@string/usb_charging_title_head"
        android:defaultValue="true" />

    <!-- Button backlight -->
    <CheckBoxPreference
        android:key="button_backlight"
        android:title="@string/button_backlight_title_head"
        android:defaultValue="false" />

    <!-- Vibrator tuning -->
    <org.omnirom.device.VibratorTuningPreference
        android:key="vibrator_tuning"
        android:title="@string/vibrator_tuning_title"
        android:dialogTitle="@string/vibrator_tuning_title" />
</PreferenceScreen>
